# mic-map

./: CMakeLists.txt  README.md
apps/: CMakeLists.txt
apps/hmd_button_test/: CMakeLists.txt  main.cpp
apps/mic_test/: CMakeLists.txt  main.cpp
apps/micmap/: CMakeLists.txt  main.cpp  micmap.rc  resource.h
cmake/: FindOpenVR.cmake  FindOpenXR.cmake
config/: default_config.json
config/actions/: bindings_gamepad.json  bindings_hmd.json  bindings_knuckles.json  bindings_oculus.json  bindings_vive.json  bindings_wmr.json  micmap_actions.json
docs/: ARCHITECTURE.md  BUILD.md
driver/: CMakeLists.txt  README.md  driver.vrdrivermanifest
driver/resources/: driver.vrresources
driver/resources/input/: micmap_controller_profile.json  vrcompositor_bindings_micmap_controller.json
driver/resources/settings/: default.vrsettings
driver/src/: device_provider.cpp  device_provider.hpp  driver_log.hpp  driver_main.cpp  http_server.cpp  http_server.hpp  process_launcher.cpp  process_launcher.hpp  virtual_controller.cpp  virtual_controller.hpp
scripts/: install_driver.bat  install_driver_test.bat  test_driver.bat  uninstall_driver.bat
src/: CMakeLists.txt
src/audio/: CMakeLists.txt
src/audio/include/micmap/audio/: audio_buffer.hpp  audio_capture.hpp  device_enumerator.hpp
src/audio/src/: audio_buffer.cpp  audio_capture.cpp  device_enumerator.cpp
src/common/: CMakeLists.txt
src/common/include/micmap/common/: logger.hpp  types.hpp
src/common/src/: logger.cpp
src/core/: CMakeLists.txt
src/core/include/micmap/core/: config_manager.hpp  state_machine.hpp
src/core/src/: config_manager.cpp  state_machine.cpp
src/detection/: CMakeLists.txt
src/detection/include/micmap/detection/: noise_detector.hpp  pattern_trainer.hpp  spectral_analyzer.hpp
src/detection/src/: noise_detector.cpp  pattern_trainer.cpp  spectral_analyzer.cpp
src/steamvr/: CMakeLists.txt
src/steamvr/include/micmap/steamvr/: dashboard_manager.hpp  vr_input.hpp
src/steamvr/src/: dashboard_manager.cpp  vr_input.cpp
tests/: CMakeLists.txt  test_placeholder.cpp
